--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
