--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --port=3002",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port=3002"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
